# rasta_irp_project

./: .gitignore  CMakeLists.txt  CMakeParams.h.in  Doxyfile  README.md
instances/: Instance_Tiny.xml  Instance_V_1.1.xml  Instance_V_1.2.xml  Instance_V_1.3.xml  Instances Description v1.0.txt  Spec_Instances v1.0.txt  Spec_Solutions v1.0.txt
instances/Feasible Solutions/: Solution_V_1.1.xml  Solution_V_1.2.xml  Solution_V_1.3.xml
src/alg/: bricks.cpp  bricks.h  solver.h  stupidSolver.cpp
src/bo/: context.cpp  context.h  customer.h  data.cpp  data.h  driver.cpp  driver.h  operation.cpp  operation.h  shift.cpp  shift.h  solution.cpp  solution.h  solution_insertion.cpp  source.h  tags.cpp  tags.h  trailer.h
src/input/: instance_reader.cpp  instance_reader.h
src/main/: main.cpp
src/utils/: helpers.cpp  helpers.h
testing/: essais.cpp  tests_constraints_operations.cpp  tests_constraints_shifts.cpp  tests_constraints_solution.cpp  tests_insertions.cpp
